feat: add docCardList to category pages, change home desc

--- a/docs/auxiliary/index.mdx
+++ b/docs/auxiliary/index.mdx
@@ -1,3 +1,5 @@
+import DocCardList from "@theme/DocCardList";
+
 # auxiliary
 
 The _auxiliary library_ provides several convenient functions
@@ -31,3 +33,7 @@ you should not use these functions for other stack values.
 
 Functions called `luaL_check*`
 always raise an error if the check is not satisfied.
+
+<hr />
+
+<DocCardList />
