--- a/docs/c-api/index.mdx
+++ b/docs/c-api/index.mdx
@@ -1,3 +1,5 @@
+import DocCardList from "@theme/DocCardList";
+
 # c-api
 
 This section describes the C API for Lua, that is,
@@ -425,3 +427,7 @@ removed from the stack and replaced by the results from the call.)
 It also has the same upvalues.
 Whatever it returns is handled by Lua as if it were the return
 of the original function.
+
+<hr />
+
+<DocCardList />
