--- a/docs/standard-libraries/index.mdx
+++ b/docs/standard-libraries/index.mdx
@@ -1,3 +1,5 @@
+import DocCardList from "@theme/DocCardList";
+
 # standard-libraries
 
 The standard Lua libraries provide useful functions
@@ -67,3 +69,7 @@ the host program can open them individually by using
 `luaopen_os` (for the operating system library),
 and `luaopen_debug` (for the debug library).
 These functions are declared in `lualib.h`.
+
+<hr />
+
+<DocCardList />
