--- a/versioned_docs/version-5.1/auxiliary/index.mdx
+++ b/versioned_docs/version-5.1/auxiliary/index.mdx
@@ -1,3 +1,5 @@
+import DocCardList from "@theme/DocCardList";
+
 # auxiliary
 
 The _auxiliary library_ provides several convenient functions
@@ -22,3 +24,7 @@ All of these functions throw an error if the check is not satisfied.
 Because the error message is formatted for arguments
 (e.g., "`bad argument #1`"),
 you should not use these functions for other stack values.
+
+<hr />
+
+<DocCardList />
