--- a/versioned_docs/version-5.1/c-api/index.mdx
+++ b/versioned_docs/version-5.1/c-api/index.mdx
@@ -1,3 +1,5 @@
+import DocCardList from "@theme/DocCardList";
+
 # c-api
 
 This section describes the C API for Lua, that is,
@@ -161,3 +163,7 @@ The documentation for each function indicates whether
 it can throw errors.
 
 Inside a C function you can throw an error by calling `lua_error`.
+
+<hr />
+
+<DocCardList />
