--- a/versioned_docs/version-5.1/standard-libraries/index.mdx
+++ b/versioned_docs/version-5.1/standard-libraries/index.mdx
@@ -1,3 +1,5 @@
+import DocCardList from "@theme/DocCardList";
+
 # standard-libraries
 
 The standard Lua libraries provide useful functions
@@ -41,3 +43,7 @@ These functions are declared in `lualib.h`
 and should not be called directly:
 you must call them like any other Lua C function,
 e.g., by using `lua_call`.
+
+<hr />
+
+<DocCardList />
